src/deployer/manifests/mifosx/loan-module-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: loan-module
    tier: backend
  name: loan-module
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loan-module
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: loan-module
        tier: backend
    spec:
      containers:
        - name: loan-module
          image: kanishksingh23/mifos-x-reactive-loan-module:09082026
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
            failureThreshold: 3
          resources:
            requests:
              memory: "384Mi"
              cpu: "100m"
            limits:
              memory: "640Mi"
              cpu: "500m"
      restartPolicy: Always
