src/deployer/manifests/mifosx/message-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: message-gateway
    tier: backend
  name: message-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: message-gateway
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: message-gateway
        tier: backend
    spec:
      containers:
        - name: message-gateway
          image: openmf/message-gateway:pull-85-1581967
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9191
              protocol: TCP
            - containerPort: 5009
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 9191
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 9191
            initialDelaySeconds: 60
            periodSeconds: 20
            failureThreshold: 3
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
      restartPolicy: Always
