src/deployer/manifests/mifosx/credit-bureau-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: "Service for the Mifos Credit Bureau plugin"
  labels:
    app: credit-bureau
    tier: backend
  name: credit-bureau
spec:
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  selector:
    app: credit-bureau
