src/deployer/manifests/mifosx/web-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: "web Application for Fineract server"
  labels:
    app: web-app
  name: web-app
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: web-app
