src/deployer/manifests/mifosx/credit-bureau-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: credit-bureau-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: credit-bureau.mifos.gazelle.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: credit-bureau
            port:
              number: 8081
