src/deployer/manifests/mifosx/loan-module-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loan-module-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: loan-module.mifos.gazelle.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: loan-module
            port:
              number: 8080
