src/deployer/manifests/mifosx/message-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: message-gateway-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: message-gateway.mifos.gazelle.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: message-gateway
            port:
              number: 9191
