src/deployer/manifests/mifosx/mifos-workflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mifos-workflow-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: workflow.mifos.gazelle.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mifos-workflow
            port:
              number: 8081
