src/deployer/manifests/mifosx/web-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mifos-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://mifos.mifos.gazelle.test"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization, Content-Type, Origin"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: mifos.mifos.gazelle.test
    http:
      paths:
      - path: /fineract-provider
        pathType: Prefix
        backend:
          service:
            name: fineract-server
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-app
            port:
              number: 80
